tests/opaque_type_cycle/opaque_type_cycle.exp
Error: test2.js:4
  4:     return x; // Error: number ~> ID
                ^ number. This type is incompatible with the expected return type of
  3: export function hide(x: number) : ID {
                                       ^^ ID

Error: test2.js:8
  8:     return show(x); // Error: number ~> ID
                ^^^^^^^ number. This type is incompatible with the expected return type of
  7: function bad(x: ID) : ID {
                           ^^ ID

Error: test2.js:12
 12:     return opaquify(x); // Error: ID ~> number
                ^^^^^^^^^^^ ID. This type is incompatible with the expected return type of
 11: function bad2(x: number): number {
                               ^^^^^^ number

Error: test3.js:5
  5: export function test(x: number): typeof(y) {(x: typeof(y)); return x;}
                                                  ^ Cannot cast `x` to `typeof y` because number [1] is incompatible with `num` [2].
  References:
    5: export function test(x: number): typeof(y) {(x: typeof(y)); return x;}
                                                    ^ [1]: number
    5: export function test(x: number): typeof(y) {(x: typeof(y)); return x;}
                                                       ^^^^^^^^ [2]: `num`

Error: test3.js:5
  5: export function test(x: number): typeof(y) {(x: typeof(y)); return x;}
                                                                        ^ number. This type is incompatible with the expected return type of
  5: export function test(x: number): typeof(y) {(x: typeof(y)); return x;}
                                      ^^^^^^^^ num


Found 5 errors
